BUG: 285310

Make sure not to try to delete the same transaction twice in case of multiple selected transactions.
Don't allow to delete the empty transaction at the end of the ledger.

Backported to stable branch


svn path=/branches/stable/extragear-kde4/office/kmymoney/; revision=1261603